drop down list corrected, now I will head for binding it together with the cart

--- a/ShoppingCart/partials/product.htm
+++ b/ShoppingCart/partials/product.htm
@@ -26,12 +26,12 @@
                 </tr>
                 <tr >
                     <td class="tdRight">
-                     <select data-ng-model="product.sizes"
-                        data-ng-options="size for size in product.sizes">               
+                     <select ng-model="chosenSize"
+                        ng-options="size for size in product.sizes">               
                     </select></td>
                     <td>
-                     <select data-ng-model="product.colors"
-                        data-ng-options="size for size in product.colors">               
+                     <select ng-model="chosenColor"
+                        ng-options="color for color in product.colors">               
                     </select></td>
                     </td>
                 </tr>
