--- a/ShoppingCart/partials/product.htm
+++ b/ShoppingCart/partials/product.htm
@@ -53,7 +53,7 @@
         <div class="span4">
             <button 
                 class="btn btn-block btn-success" 
-                ng-click="cart.addItem(product.sku, product.name, product.price, 1)">
+                ng-click="cart.addItem(product.sku, product.name, product.price, 1, chosenSize, chosenColor)">
                 <i class="icon-shopping-cart icon-white" /> add to cart
             </button>
             <button 
