--- a/ShoppingCart/partials/store.htm
+++ b/ShoppingCart/partials/store.htm
@@ -27,8 +27,7 @@
             {{product.price | currency}}
         </td>
         <td class="tdCenter">
-            <a href="" ng-click="cart.addItem(product.sku, product.name, product.price, 1)">
-                add to cart
+            add to cart disabled
             </a>
         </td>
     </tr>
