--- a/ShoppingCart/partials/product.htm
+++ b/ShoppingCart/partials/product.htm
@@ -1,5 +1,5 @@
 ﻿<p class="text-info">
-    <img ng-src="img/products/{{product.sku}}.jpg" alt="{{product.name}}"/>
+<img ng-src="img/products/{{product.name}}-{{product.sku}}-{{product.colorCodes[product.colors[0]]}}-{{product.colors[0]}}.png" alt="{{product.name}}" />
     {{product.name}}: {{product.description}}<br />
 </p>
 
