--- a/ShoppingCart/partials/store.htm
+++ b/ShoppingCart/partials/store.htm
@@ -18,13 +18,14 @@
         </td>
     </tr>
     <tr ng-repeat="product in store.products | orderBy:'name' | filter:search" >
-        <td class="tdCenter"><img ng-src="img/products/{{product.sku}}.jpg" alt="{{product.name}}" /></td>
+        <td class="tdCenter"><img ng-src="img/products/{{product.name}}-{{product.sku}}-{{product.colorCodes[product.colors[0]]}}-{{product.colors[0]}}.png" alt="{{product.name}}" /></td>
         <td>
             <a href="#/products/{{product.sku}}"><b>{{product.name}}</b></a><br />
             {{product.description}}
         </td>
         <td class="tdRight">
             {{product.price | currency}}
+            
         </td>
         <td class="tdCenter">
             add to cart disabled
