own implemented language support. to be continued and refactored

--- a/ShoppingCart/partials/product.htm
+++ b/ShoppingCart/partials/product.htm
@@ -1,6 +1,6 @@
 ﻿<p class="text-info">
 <img ng-src="img/products/{{product.name}}-{{product.sku}}-{{product.colorCodes[chosenColor]}}-{{chosenColor}}.png" alt="{{product.name}}" />
-    {{product.name}}: {{product.description}}<br />
+    {{product.name}}: {{lang[product.description]}}<br />
 </p>
 
 <div class="container-fluid">
