--- a/ShoppingCart/partials/store.htm
+++ b/ShoppingCart/partials/store.htm
@@ -1,11 +1,13 @@
 ﻿<p class="text-info">
-    Welcome to the Angular Store.<br />
-    Please select the products you want and add them to your shopping cart.<br />
-    When you are done, click the shopping cart icon to review your order and check out.
+    {{lang.welcome}}<br />
 </p>
 
 <p>
-    Search: <input ng-model="search">
+    {{lang.search}}: <input ng-model="search">
+    <a href="" ng-click="changeLanguage('english')">english</a>
+    <a href="" ng-click="changeLanguage('swedish')">svenska</a>
+    <a href="" ng-click="changeLanguage('chinese')">中文</a>
+</a>
 </p>
 
 <table class="table table-bordered">
