--- a/ShoppingCart/partials/store.htm
+++ b/ShoppingCart/partials/store.htm
@@ -4,9 +4,9 @@
 
 <p>
     {{lang.search}}: <input ng-model="search">
-    <a href="" ng-click="changeLanguage('english')">english</a>
-    <a href="" ng-click="changeLanguage('swedish')">svenska</a>
-    <a href="" ng-click="changeLanguage('chinese')">中文</a>
+    <a class="tdRight" href="" ng-click="changeLanguage('english')"><img src="img/flags/United_Kingdom.jpg" width="50"></a>
+    <a href="" ng-click="changeLanguage('swedish')"><img src="img/flags/Sweden.jpg" width="40"></a>
+    <a href="" ng-click="changeLanguage('chinese')"><img src="img/flags/China.jpg" width="38"></a>
 </a>
 </p>
 
