how to remove top line?

--- a/ShoppingCart/partials/store.htm
+++ b/ShoppingCart/partials/store.htm
@@ -2,13 +2,18 @@
     {{lang.welcome}}<br />
 </p>
 
-<p>
+<table class="table table-borderless">
+    <tr>
+        <td class="tdRight" >
     {{lang.search}}: <input ng-model="search">
-    <a class="tdRight" href="" ng-click="changeLanguage('english')"><img src="img/flags/United_Kingdom.jpg" width="50"></a>
-    <a href="" ng-click="changeLanguage('swedish')"><img src="img/flags/Sweden.jpg" width="40"></a>
-    <a href="" ng-click="changeLanguage('chinese')"><img src="img/flags/China.jpg" width="38"></a>
-</a>
-</p>
+        </td>
+        <td class="tdRight" colspan="4" >
+            <a href="" ng-click="changeLanguage('english')"><img src="img/flags/United_Kingdom.jpg" width="50"></a>
+            <a href="" ng-click="changeLanguage('swedish')"><img src="img/flags/Sweden.jpg" width="40"></a>
+            <a href="" ng-click="changeLanguage('chinese')"><img src="img/flags/China.jpg" width="38"></a>
+        </td>
+    </tr>
+</table>
 
 <table class="table table-bordered">
     <tr class="well">
