--- a/ShoppingCart/partials/store.htm
+++ b/ShoppingCart/partials/store.htm
@@ -31,7 +31,7 @@
             {{product.description}}
         </td>
         <td class="tdRight">
-            {{product.price | currency}}
+            {{product.price | currency:lang.currency}}
             
         </td>
         <td class="tdCenter">
