--- a/ShoppingCart/partials/store.htm
+++ b/ShoppingCart/partials/store.htm
@@ -34,7 +34,7 @@
 <div class="images">
 <a href="#/products/{{product.sku}}">
     <a href="/sv/Vessla?id=50341">
-    <img class="image_itam" title="{{product.name}}" ng-src="img/prod100/{{product.name}}-{{product.sku}}-{{product.colorCodes[product.colors[0]]}}-{{product.colors[0]}}.png" alt="{{product.name}}" />
+    <img class="image_item" title="{{product.name}}" ng-src="img/prod100/{{product.name}}-{{product.sku}}-{{product.colorCodes[product.colors[0]]}}-{{product.colors[0]}}.png" alt="{{product.name}}" />
     </a>
 </div>
 <div class="price_outer">
