--- a/ShoppingCart/css/style.css
+++ b/ShoppingCart/css/style.css
@@ -24,10 +24,10 @@
     float:top;
     border: 2px solid blue;}
 
-.list-left {
+.list-bottom {
     width:auto;
-    padding:10px;
-    float:left;
+    padding:0px;
+    float:bottom;
     border: 2px solid blue;}
 
 .list-right {
@@ -41,3 +41,33 @@
 
 .list-filters { padding:8px; }
 
+
+    .Table
+    {
+        display: table;
+    }
+    .Title
+    {
+        display: table-caption;
+        text-align: center;
+        font-weight: bold;
+        font-size: larger;
+    }
+    .Heading
+    {
+        display: table-row;
+        font-weight: bold;
+        text-align: center;
+    }
+    .Row
+    {
+        display: table-row;
+    }
+    .Cell
+    {
+        display: table-cell;
+        border: solid;
+        border-width: thin;
+        padding-left: 5px;
+        padding-right: 5px;
+    }
