--- a/ShoppingCart/partials/store.htm
+++ b/ShoppingCart/partials/store.htm
@@ -63,7 +63,23 @@ Stl. 19-26
     </div>
  
     <div class="list-left">
-        <div class="list-title">CELL2</div>
-        <div class="list-filters">CELL3
+        <div class="Table">
+        <div class="Row">
+            <div class="Cell">
+                <p>Row 1</p>
+            </div>
+            <div class="Cell">
+                <p>Row 1</p>
+            </div>
+        </div>
+        <div class="Row">
+            <div class="Cell">
+                <p>Row 2 Column 1</p>
+            </div>
+            <div class="Cell">
+                <p>Row 2 Column 2</p>
+            </div>
+        </div>
+</div>
     </div>
 </div>
