--- a/ShoppingCart/partials/store.htm
+++ b/ShoppingCart/partials/store.htm
@@ -59,27 +59,28 @@ Stl. 19-26
 <div ng-repeat="product in store.products | orderBy:'name' | filter:search" class="list-row">
  
     <div class="list-top">
-    <img class="image_item" title="{{product.name}}" ng-src="img/prod100/{{product.name}}-{{product.sku}}-{{product.colorCodes[product.colors[0]]}}-{{product.colors[0]}}.png" alt="{{product.name}}" />
+    <a href="#/products/{{product.sku}}">
+        <img class="image_item" title="{{product.name}}" ng-src="img/prod100/{{product.name}}-{{product.sku}}-{{product.colorCodes[product.colors[0]]}}-{{product.colors[0]}}.png" alt="{{product.name}}" />
+    </a>
     </div>
  
-    <div class="list-left">
-        <div class="Table">
-        <div class="Row">
-            <div class="Cell">
-                <p>Row 1</p>
+    <div class="list-bottom">
+        <div class="list-top">
+            <div class="list-left">
+                <a id="art_50341_D22302" class="itemnamelink" href="#/products/{{product.sku}}">{{product.name}}</a>
             </div>
-            <div class="Cell">
-                <p>Row 1</p>
-            </div>
-        </div>
-        <div class="Row">
-            <div class="Cell">
-                <p>Row 2 Column 1</p>
-            </div>
-            <div class="Cell">
-                <p>Row 2 Column 2</p>
+            <div class="list-right">
+                <p>has colors </p>
             </div>
         </div>
-</div>
+        <div class="list-bottom">
+            <div class="list-left">
+            <span class="price">{{product.price | currency:lang.currency}}</span>
+            </div>
+            <div class="list-right">
+                <a class="button_choose" href="#/products/{{product.sku}}">Välj</a>
+            </div>
+        </div>
     </div>
 </div>
+
