--- a/ShoppingCart/partials/product.htm
+++ b/ShoppingCart/partials/product.htm
@@ -1,7 +1,14 @@
 ﻿<p class="text-info">
+
+
+<div >
+<div class="list-left">
 <img ng-src="img/products/{{product.name}}-{{product.sku}}-{{product.colorCodes[chosenColor]}}-{{chosenColor}}.png" alt="{{product.name}}" />
-    {{product.name}}: {{lang[product.description]}}<br />
-</p>
+</div>
+<div class="list-rigth">
+{{product.name}}: {{lang[product.description]}}<br />
+</div>
+</div>
 
 <div class="container-fluid">
     <div class="row-fluid">
