--- a/ShoppingCart/partials/store.htm
+++ b/ShoppingCart/partials/store.htm
@@ -26,6 +26,7 @@
     </tr>
 </table>
 
+<div class="list_holder">
 <div ng-repeat="product in store.products | orderBy:'name' | filter:search" class="list-row listview_window list_view">
  
     <div class="prod_outer_3">
@@ -62,4 +63,5 @@
     </div>
     </div>
     </div>
+</div>
 </div>
