--- a/ShoppingCart/css/style.css
+++ b/ShoppingCart/css/style.css
@@ -13,15 +13,9 @@
 }
 
 
-.list-item {
-    padding:20px;
-    
-}
-
-
 .list_holder {
     width:800px;
-    float:left;
+    margin-left:auto;
 }
 .list-row {
     background:#ffffff;
