--- a/ShoppingCart/partials/store.htm
+++ b/ShoppingCart/partials/store.htm
@@ -49,7 +49,7 @@
                 </div>
             </div>
             <div class="list-right">
-                <div class="item_text">Finns i flera färger <br>Stl. {{product.sizes[0]}}-{{product.sizes[product.sizes.length-1]}}</div>
+                <div class="item_text" ><div class="many_colors" ng-show="product.colors.length>1">Finns i flera färger </div><br>Stl. {{product.sizes[0]}}-{{product.sizes[product.sizes.length-1]}}</div>
         </div>
         </div>
         <div class="list-bottom-inner">
