--- a/ShoppingCart/partials/store.htm
+++ b/ShoppingCart/partials/store.htm
@@ -14,6 +14,10 @@
         </td>
     </tr>
 </table>
+hejhej
+<div ng-repeat="currency in currencies">
+            <a href="" ng-click="changeCurrency({{currency}})">{{currency}}</a>
+</div>
 
 <table class="table table-bordered">
     <tr class="well">
