--- a/ShoppingCart/partials/product.htm
+++ b/ShoppingCart/partials/product.htm
@@ -21,7 +21,7 @@
                     <td class="tdRight" colspan="3" >
                         <a href="default.htm#/cart" title="go to shopping cart" ng-disabled="cart.getTotalCount() < 1">
                             <i class="icon-shopping-cart" />
-                            <b>{{cart.getTotalCount()}}</b> items, <b>{{cart.getTotalPrice() | currency}}</b>
+                            <b>{{cart.getTotalCount()}}</b> items, <b>{{cart.getTotalPrice() * curra.rate | currency: curra.display}}</b>
                             <span ng-show="cart.getTotalCount(product.sku) > 0"><br />this item is in the cart</span>
                         </a>
                     </td>
