--- a/ShoppingCart/partials/shoppingCart.htm
+++ b/ShoppingCart/partials/shoppingCart.htm
@@ -39,14 +39,14 @@
                         <button 
                             class="btn btn-success" type="button" 
                             ng-disabled="item.quantity >= 1000"
-                            ng-click="cart.addItem(item.sku, item.name, item.price, +1)">+</button>
+                            ng-click="cart.addItem(item.sku, item.name, item.price * curra.rate, +1)">+</button>
                         <button 
                             class="btn btn-inverse" type="button" 
                             ng-disabled="item.quantity <= 1"
-                            ng-click="cart.addItem(item.sku, item.name, item.price, -1)">-</button>
+                            ng-click="cart.addItem(item.sku, item.name, item.price * curra.rate, -1)">-</button>
                       </div>
                     </td>
-                    <td class="tdRight">{{item.price * item.quantity | currency}}</td>
+                    <td class="tdRight">{{item.price * curra.rate * item.quantity | currency:curra.display}}</td>
                     <td class="tdCenter" title="remove from cart">
                         <a href="" ng-click="cart.addItem(item.sku, item.name, item.price, -10000000)" >
                             <i class="icon-remove" />
@@ -58,7 +58,7 @@
                 <tr class="well">
                     <td><b>Total</b></td>
                     <td class="tdCenter"><b>{{cart.getTotalCount()}}</b></td>
-                    <td class="tdRight"><b>{{cart.getTotalPrice() | currency}}</b></td>
+                    <td class="tdRight"><b>{{item.price * curra.rate * item.quantity | currency:curra.display}}</b></td>
                     <td />
                 </tr>
             </table>
